fix regressions in the way we attach references from TEI